// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CModalBackdrop customize 1`] = `
<div>
  <div
    class="modal-backdrop bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CModalBackdrop component 1`] = `
<div>
  <div
    class="modal-backdrop"
  >
    Test
  </div>
</div>
`;
